added john.png, wrote resume, index, and websiterules

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+	<link rel="stylesheet" href="websiterules.css">
 <body>
+
+
+
+<h1>John Casey's Starter Website</h1>
+
+<img src="john.png" alt="John Casey" width="367" height="460">
+
+<br>
+<a href="resume.html"> My Resume </a>
+<br>
+<a href="bio.html"> A Short Autobiography </a>
+
 
 </body>
 
