--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+	<link rel="stylesheet" href="websiterules.css">
+<body>
+<div id="wrap">
+<div id="header">
+<h1>John Casey</h1>
+
+</div>
+
+<div id="qualifications">
+<h3>Education</h3>
+<p>Current senior studying history and computer science at Tufts University</p>
+<h3>Relevant Coursework</h3>
+<p>Past Coursework</p>
+<ul>
+<li>Computer Science 40 - Machine Structire & Assembly Language Programming</li>
+<li>Theoretical Computer Science - Taken at the Universit&auml;t T&uuml;bingen</li>
+<li>Algorithms - Taken at the Universit&auml;t T&uuml;bingen</li>
+</ul>
+<p>Current Coursework</p>
+<ul>
+<li>Computer Science 105 - Programming Languages</li>
+<li>Computer Science 20 - Web Programming</li>
+</ul>
+
+<h3>Professional Experience</h3>
+<ul>
+<li> I currently work as a theatre technician for Cohen Auditorium. </li>
+<li> Internship at Marquette University developing the ECS (Exploring Computer Science) program.</li>
+<dd>Our team proposed the first viable solution to the cost problems associated with implimenting ECS in the Los Angeles School District.</dd>
+</ul>
+
+<h3>Skills</h3>
+<ul>
+<li>Proficiency in C and C++.</li>
+<li>Some experience with Python and Java.</li>
+<li>Proficiency in German.</li>
+<li>Significant experience as a sound engineer and sound technician.</li>
+
+</ul>
+
+<h3>Other Activities</h3>
+<ul>
+<li>Spent last year in Germany at the Universit&auml;t T&uuml;bingen studying history and computer science as part of a year abroad.
+<li>Currently co-teaching a course titled "The Anthropology of Dungeons and Dragons" to freshman with another Tufts senior.
+</ul>
+</div>
+
+
+</div>
+</body>
+
+</html>
 
