--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,12 @@
 
 <head>
 	<link rel="stylesheet" href="websiterules.css">
+<title>
+John Casey's Resume
+</title>
+</head>
 <body>
+
 <div id="wrap">
 <div id="header">
 <h1>John Casey</h1>
@@ -29,8 +34,8 @@
 <h3>Professional Experience</h3>
 <ul>
 <li> I currently work as a theatre technician for Cohen Auditorium. </li>
-<li> Internship at Marquette University developing the ECS (Exploring Computer Science) program.</li>
-<dd>Our team proposed the first viable solution to the cost problems associated with implimenting ECS in the Los Angeles School District.</dd>
+<li> Internship at Marquette University developing the ECS (Exploring Computer Science) program.
+	<ul><li>Our team proposed the first viable solution to the cost problems associated with implimenting ECS in the Los Angeles School District.</li></ul></li>
 </ul>
 
 <h3>Skills</h3>
