--- a/resume.html
+++ b/resume.html
@@ -21,14 +21,15 @@ John Casey's Resume
 <h3>Relevant Coursework</h3>
 <p>Past Coursework</p>
 <ul>
-<li>Computer Science 40 - Machine Structire & Assembly Language Programming</li>
+<li>Data Structures</li>
+<li>Machine Structire & Assembly Language Programming</li>
 <li>Theoretical Computer Science - Taken at the Universit&auml;t T&uuml;bingen</li>
 <li>Algorithms - Taken at the Universit&auml;t T&uuml;bingen</li>
 </ul>
 <p>Current Coursework</p>
 <ul>
-<li>Computer Science 105 - Programming Languages</li>
-<li>Computer Science 20 - Web Programming</li>
+<li>Programming Languages</li>
+<li>Web Programming</li>
 </ul>
 
 <h3>Professional Experience</h3>
