--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<link rel="stylesheet" href="websiterules.css">
-<title>
-John Casey's Home Page
-</title>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>
+    John Casey's Home Page
+  </title>
 </head>
 <body>
-
-
-
-<h1>John Casey's Starter Website</h1>
+<div class="page-header">
+  <h1>John Casey</h1>
+  <h3>I'm studying history and computers, making web apps, and playing Magic</h3>
+</div>
 
 <img src="john.png" alt="John Casey" width="367" height="460">
 
