--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   </title>
 </head>
 <body>
+<div class="container-fluid">
 <div class="page-header">
   <h1>John Casey</h1>
   <h3>I'm studying history and computers, making web apps, and playing Magic</h3>
+</div>
 </div>
 
 <img src="john.png" alt="John Casey" width="367" height="460">
