--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="extrastyle.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,19 +12,44 @@
 </head>
 <body>
 <div class="container-fluid">
-<div class="page-header">
-  <h1>John Casey</h1>
-  <h3>I'm studying history and computers, making web apps, and playing Magic</h3>
+  <div class="page-header">
+    <div class="row">
+      <div class="col-sm-9">
+        <h1>John Casey</h1>
+        <h3>I'm studying history and computers, making web apps, and playing Magic.</h3>
+      </div>
+      <div class="fullscreen">
+        <div class="col-sm-2">
+          <img src="john.png" alt="John Casey" width=100%>
+        </div>
+        <div class="col-sm-1">
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+<div class="container-fluid text-center">
+  <div class="row">
+    <div class="col-sm-2">
+      <a href="resume.html">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            "hello2"
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-sm-2">
+      <a href="bio.html">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            "hello"
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
 </div>
-
-<img src="john.png" alt="John Casey" width="367" height="460">
-
-<br>
-<a href="resume.html"> My Resume </a>
-<br>
-<a href="bio.html"> A Short Autobiography </a>
-
 
 </body>
 
