--- a/index.html
+++ b/index.html
@@ -30,23 +30,113 @@
 </div>
 <div class="container-fluid text-center">
   <div class="row">
-    <div class="col-sm-2">
-      <a href="resume.html">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            "hello2"
+    <div class="col-sm-3">
+      <!-- Trigger the modal with a button -->
+      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#computerScience">Computer Science</button>
+
+  <!-- Modal -->
+      <div class="modal fade" id="computerScience" role="dialog">
+        <div class="modal-dialog">
+
+      <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Computer Science</h4>
+            </div>
+            <div class="modal-body">
+              <p>I am currently studying computer science at Tufts University. In particular, I have been focusing on the web development stack, from HTML, CSS, and JavaScript, to back end database design and management. Outside of my classwork, I worked at Marquette University as a research intern developing an improved version of the Exploring Computer Science curriculum for high school CS education, where our team reduced the cost of part of the curriculum from approximately $250 per unit to $50 per unit. </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
           </div>
+
         </div>
-      </a>
+      </div>
     </div>
     <div class="col-sm-2">
-      <a href="bio.html">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            "hello"
+      <!-- Trigger the modal with a button -->
+      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#history">History</button>
+
+  <!-- Modal -->
+      <div class="modal fade" id="history" role="dialog">
+        <div class="modal-dialog">
+
+      <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">History</h4>
+            </div>
+            <div class="modal-body">
+              <p>I have just finished taking classes for my History major at Tufts. I focused my studies on European intellectual history, learning how art, culture, and ideas influenced history, and were influenced by history. In Fall of 2015 I capped off my major with a research seminar on Pacific Coast America, where I studied the effects of internment on the cultural trends of pre-war Japanese America.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
           </div>
+
         </div>
-      </a>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <!-- Trigger the modal with a button -->
+      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#foodfinder">Foodfinder</button>
+
+  <!-- Modal -->
+      <div class="modal fade" id="foodfinder" role="dialog">
+        <div class="modal-dialog">
+
+      <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Foodfinder</h4>
+            </div>
+            <div class="modal-body">
+              <p>Foodfinder is a crowd sourced food-finding service, where users can find events with free food uploaded by other users. Initially developed at Tufts Polyhack 2015, the app is currently being improved by myself and the rest of the initial development team. We anticipate going live in Summer of 2016.</p>
+              <a href="https://shrouded-stream-3267.herokuapp.com/">Link</a>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <!-- Trigger the modal with a button -->
+      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#magic">Magic</button>
+
+  <!-- Modal -->
+      <div class="modal fade" id="magic" role="dialog">
+        <div class="modal-dialog">
+
+      <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Magic: The Gathering</h4>
+            </div>
+            <div class="modal-body">
+              <!--<div class="col-sm-3"> \\Use to add pic Later
+              </div>
+                <div class="col-sm-9"> -->
+                <p>Outside of school and work, I am an avid Magic player. I have found a wonderful community at Tufts and in Boston to play and compete with. I mostly play non-rotating formats, and I am currently running Kiki-Control in Modern and Infect in Legacy. My favorite format, however, is cube, which I get to play with the other members of Tufts MTG almost every week.</p>
+              <!--</div>-->
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <a href="resume.pdf" button type="button" class="btn btn-info btn-lg" >Resume</a>
     </div>
   </div>
 </div>
